[project]
name = "ambr-py"
version = "1.8.11"
description = "Async API wrapper for Project Amber (gi.yatta.moe) written in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.12.3",
    "aiohttp>=3.10.9",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "aiofiles>=24.1.0",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/ambr"
Repository = "https://github.com/seriaati/ambr.git"
Issues = "https://github.com/seriaati/ambr/issues"
Documentation = "https://gh.seria.moe/ambr"

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "griffe-pydantic>=1.1.7",
]
test = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ambr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"

[tool.uv]
default-groups = "all"
